@@ -1,4 +1,4 @@
 DIST wagon-ftp-1.0.tar.bz2 10341 RMD160 ae0d172112ac51168054f851e1dca67ec9260a6c SHA1 ee917865e694cd42343687800939151cd0d95713 SHA256 fc2280e19635cd5f3d66ad1ee50ca4bbaac42448febcfd6153294a8d42c376f7
-EBUILD wagon-ftp-1.0.ebuild 871 RMD160 8608d9a5714e8c8cca418ba83206a58b9d3a8a32 SHA1 9c92e6087761c8ba694ac812801660e0e7c481c7 SHA256 315e03e891fb2ae6c975fd326035b49456367896a9321d5244a7c5d55728b19c
-MISC ChangeLog 400 RMD160 68c27efff545d81bfbd35c2571f8c8aaf67dee9d SHA1 c77800f6e24ad3374c66382edb46828205ff4b09 SHA256 dfa62662d0a46bca17e28d56682de7d2a9dd8ba99806a178965fb68b059bfa23
+EBUILD wagon-ftp-1.0.ebuild 815 RMD160 6145e4d4f10114b8d51475dd7b68d32dbbdbfd10 SHA1 828aadfb59b2b8ed6dc61aabb4131f3bf9f51a42 SHA256 aae81720b84feb89ef7667190458417adede9112d45c78f75d3694e0f4f93509
+MISC ChangeLog 501 RMD160 7960e6554a1f82590defb68b51b5a4ec0ee213bf SHA1 96d23efd24a17f4e578063ddd4381631a8a687d3 SHA256 a84329fd89d93bd1cf0252fe02e49b4b1a21f1651e09a32d4d54aa69de2c95a0
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
