@@ -2,18 +2,16 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit java-pkg-2 java-maven-2
+inherit java-maven-2
 
 DESCRIPTION="The Wagon API project defines a simple API for transfering resources (artifacts) to and from repositories"
 # svn co http://svn.apache.org/repos/asf/maven/wagon/tags/*/wagon-provider-api/ wagon-provider-api
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
-
 SLOT="0"
 KEYWORDS="~x86"
 IUSE="source doc"
 LICENSE="Apache-2.0"
 HOMEPAGE="http://maven.apache.org"
-
 DEP="dev-java/plexus-utils
 	dev-java/plexus-ftpd
 	dev-java/commons-net
@@ -26,8 +24,4 @@ EANT_GENTOO_CLASSPATH="plexus-utils
 	xml-commons
 	commons-net
 	plexus-ftpd"
-
-src_compile() {
-	java-pkg-2_src_compile
-}
 
