@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Apr 2007; kiorky <kiorky@cryptelium.net> wagon-ftp-1.0.ebuild:
+  Migrating to new maven eclass
+
   24 Apr 2007; kiorky <kiorky@cryptelium.net> -wagon-ftp-1.0_alpha4.ebuild,
   +wagon-ftp-1.0.ebuild, +metadata.xml:
   added  to the java-experimental overlay as a maven dependency.see #175827
